<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".Hady.HadyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddHady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_add_back"
            android:onClick="addPlayer"
            android:text="@string/add" />

        <EditText
            android:id="@+id/edHadyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_back"
            android:ems="10"
            android:hint="@string/player_name"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHadyList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnSelectFromHady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/btn_add_back"
        android:onClick="Select"
        android:text="@string/draw" />

</LinearLayout>