<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="22dp"
    tools:context=".LeagueActivity.LeagueActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edTeamName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_weight="1"
            android:background="@drawable/edit_back"
            android:hint="@string/team_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnAddTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_add_back"
            android:onClick="add"
            android:text="@string/add" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTeams"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:layoutAnimation="@anim/rv_anim">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Go"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/btn_add_back"
        android:text="@string/go"
        tools:ignore="OnClick" />

</LinearLayout>